tests/ui/pattern/struct-parser-recovery-issue-126344.stderr
error: struct fields are separated by `,`
  --> $DIR/struct-parser-recovery-issue-126344.rs:2:11
   |
LL | struct Wrong {
   |        ----- while parsing this struct
LL |     x: i32;
   |           ^ help: replace `;` with `,`

error: expected type, found `1`
  --> $DIR/struct-parser-recovery-issue-126344.rs:21:8
   |
LL | struct WrongWithType {
   |        ------------- while parsing this struct
LL |     x: 1,
   |        ^ expected type

error[E0609]: no field `x` on type `&Wrong`
  --> $DIR/struct-parser-recovery-issue-126344.rs:9:7
   |
LL |     w.x;
   |       ^ unknown field
   |
help: a field with a similar name exists
   |
LL |     w.y;
   |       ~

error[E0609]: no field `x` on type `&WrongWithType`
  --> $DIR/struct-parser-recovery-issue-126344.rs:28:7
   |
LL |     w.x;
   |       ^ unknown field
   |
help: a field with a similar name exists
   |
LL |     w.y;
   |       ~

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0609`.
